// Copyright (C) 2018 ConsenSys AG
//
// This file is part of uPort Mobile App.
//
// uPort Mobile App is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// uPort Mobile App is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with uPort Mobile App.  If not, see <http://www.gnu.org/licenses/>.
//

import { storeRootAddress, incIdentityIndex, incAccountIndex, seedConfirmed, accountRiskSent, resetHDWallet } from 'uPortMobile/lib/actions/HDWalletActions.js'

it('creates a STORE_ROOT_ADDRESS action with given address', () => {
  expect(storeRootAddress('0xabcde')).toMatchSnapshot()
})

it('creates a INC_IDENTITY_INDEX action', () => {
  expect(incIdentityIndex()).toMatchSnapshot()
})

it('creates a INC_ACCOUNT_INDEX action', () => {
  expect(incAccountIndex(0)).toMatchSnapshot()
})

it('creates a SEED_CONFIRMED action', () => {
  expect(seedConfirmed()).toMatchSnapshot()
})

it('creates a ACCOUNT_RISK_SENT action', () => {
  expect(accountRiskSent()).toMatchSnapshot()
})

it('creates a RESET_HD_WALLET action', () => {
  expect(resetHDWallet()).toMatchSnapshot()
})
